[gd_scene load_steps=3 format=3 uid="uid://dhcy0cx7wchpv"]

[ext_resource type="Texture2D" uid="uid://c1gkst2tff7if" path="res://entities/player/sprites/duck.png" id="1_1xk5k"]
[ext_resource type="Script" path="res://addons/LevelEditor/SceneContainer.gd" id="1_k720f"]

[node name="Dock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlowContainer" type="FlowContainer" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("1_k720f")

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/FlowContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("1_1xk5k")
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="AddScene" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Add scene"

[node name="ReloadPreviews" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Reload previews"

[node name="LoadPrevious" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Load previous"

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Save"

[node name="LoadFileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(392, 159)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tscn")

[node name="SaveFileDialog" type="FileDialog" parent="."]
size = Vector2i(392, 159)
filters = PackedStringArray("*.json")

[node name="LoadSaveDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(392, 159)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.json")

[connection signal="pressed" from="VBoxContainer/AddScene" to="VBoxContainer/FlowContainer" method="_on_add_scene_pressed"]
[connection signal="pressed" from="VBoxContainer/ReloadPreviews" to="VBoxContainer/FlowContainer" method="_on_reload_previews_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadPrevious" to="VBoxContainer/FlowContainer" method="_on_load_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="VBoxContainer/FlowContainer" method="_on_save_pressed"]
[connection signal="file_selected" from="LoadFileDialog" to="VBoxContainer/FlowContainer" method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="VBoxContainer/FlowContainer" method="_on_save_file_dialog_file_selected"]
[connection signal="file_selected" from="LoadSaveDialog" to="VBoxContainer/FlowContainer" method="_on_load_save_dialog_file_selected"]
